@@ -769,6 +769,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)
 
+    HDFS-8772. Fix TestStandbyIsHot#testDatanodeRestarts which occasionally fails.
+    (Walter Su via wang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
